--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Sobre - IFSP - Pirituba</title>
+<title>Login - IFSP - Pirituba</title>
 <script src="js/disabling.js"></script>
 </head>
 <body>
@@ -12,8 +12,8 @@
       <object width="100%" height="65px" data="menu.html"></object>
     </nav>
   </header>
-  <h1>Sobre</h1>
-  <h2>Alteração no arquivo sobre</h2>
+  <h1>Login</h1>
+  <h2>Inclusão da página Login</h2>
 
 </body>
 </html>
