--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <nav>
             <!-- Indica que o conteúdo é composto de links de navegação-->
-            <p><b>Cursos do IFSP - Campus Pirituba</b></p>
+            <p><b>Cursos do IFSP - Campus Pirituba - SP</b></p>
             <ul>
                 <!-- Estrutura de lista não ordenada -->
                 <li>
